--- a/README
+++ b/README
@@ -20,10 +20,9 @@
  -m  Force MD5 encryption of the password (not yet implemented).
  -d  Force CRYPT encryption of the password (not yet implemented).
  -s  Force SSHA encryption of the password (default).
- -D  Delete the specified user.sage: htpasswd opts [-c file] username [password]
+ -D  Delete the specified user.
  
 
 * Example:
-	htpasswd-ssha -cn mypassfile username
-
+	htpasswd-ssha -c mypassfile username
 
